2010-08-19  Al Riddoch  <alriddoch@googlemail.com>

	* mercator 0.2.8 released.

2009-02-24  Al Riddoch  <alriddoch@googlemail.com>

	* mercator 0.2.7 released.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* mercator 0.2.6 released.

2006-08-22  Al Riddoch  <alriddoch@zepler.org>

	* mercator 0.2.5 released.

2005-06-16  Al Riddoch  <alriddoch@zepler.org>

	* mercator 0.2.4 released.

2005-06-11  Al Riddoch  <alriddoch@zepler.org>

	* mercator 0.2.3 released.

2005-05-08  Al Riddoch  <alriddoch@zepler.org>

	* mercator 0.2.2 released.
