@@ -1,7 +1,7 @@
 SUBDIRS = Mercator tests
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = mercator-0.2.pc
+pkgconfig_DATA = mercator-0.3.pc
 
 EXTRA_DIST = mercator.spec Doxyfile autogen.sh
 
