@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: @PACKAGE@
+Description: A config handling library.
+Requires: @MERCATOR_REQUIRES@
+Version: @VERSION@
+Libs: -L${libdir} @MERCATOR_LIBS@
+Cflags: -I${includedir}/Mercator@MERCATOR_LIB_SUFFIX@
