@@ -1,3 +1,7 @@
+2010-12-xx  Al Riddoch  <alriddoch@googlemail.com>
+
+	* mercator 0.3.0 released.
+
 2010-08-19  Al Riddoch  <alriddoch@googlemail.com>
 
 	* mercator 0.2.8 released.
